--- a/lithubs/templates/lithubs/components/forms/login_register.html
+++ b/lithubs/templates/lithubs/components/forms/login_register.html
@@ -1,9 +1,70 @@
-{% extends 'lithubs/components/main.html' %}
 {% load static %}
+{% load bootstrap5 %}
 
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<link rel="icon" type="image/ico" href="{% static 'lithubs/img/parchment.png' %}">
+<title>LitHub</title>
 
+<link rel="stylesheet" href="{% static 'lithubs/css/styles.css' %}">
 
+<!-- bootstrap -->
+{% bootstrap_css %}
+
+</head>
+
+<body id="bg"style="background-image:url('{% static "lithubs/img/space.jpg" %}'); background-repeat:no-repeat; background-size:cover;">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+  <img class="navbar-img" src="{% static 'lithubs/img/parchment.png' %}" alt="parchment">
+    <a class="navbar-brand" href="{% url 'lithubs:index' %}" style="color: var(--azure); margin-left: 1%; font-size: 30px;">LitHub</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+	  <i style="color: white;"class="fa fa-pen-to-square fa-2x feed-icons"></i>
+        </li>
+        <li class="nav-item">
+	      <a class="nav-link active" aria-current="page" href="{% url 'lithubs:feed' %}">Feed</a>
+        </li>
+        <li class="nav-item">
+	      <a class="nav-link active" aria-current="page" href="{% url 'lithubs:signout' %}">Sign out</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img class="nav-avatar" src="{{ user.avatar.url}}" alt="">
+          </a>
+          <ul class="dropdown-menu" style="background-color: var(--primary-color);">
+            <li><a class="dropdown-item" href="#">your profile</a></li>
+            <li><a class="dropdown-item" href="#">your settings</a></li>
+            <li><hr class="dropdown-divider"></li>
+	    <li><a class="dropdown-item" href="{% url 'lithubs:signout' %}">sign out</a></li>
+          </ul>
+        </li>
+      </ul>
+      {% else %}
+        <li class="nav-item">
+	      <a class="nav-link active" aria-current="page" href="{% url 'lithubs:feed' %}">Feed</a>
+        </li>
+        <li class="nav-item">
+	      <a class="nav-link active" aria-current="page" href="{% url 'lithubs:signin' %}">Sign in</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'lithubs:register' %}">sign up</a>
+        </li>
+      {% endif %}
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      </form>
+    </div>
+  </div>
+</nav>
 {% if page == 'login' %}
 <!-- Login -->
 <main class="form-signin w-100 m-auto">
@@ -58,5 +119,6 @@
   </form>
 
   {% endif %}
+</body>
+</html>
 
-{% endblock content %}
