--- a/lithubs/templates/lithubs/components/main.html
+++ b/lithubs/templates/lithubs/components/main.html
@@ -14,10 +14,11 @@
 {% bootstrap_css %}
 
 </head>
-<body id="bg"style="background-image:url('{% static "lithubs/img/space.jpg" %}'); background-repeat:no-repeat; background-size:cover;">
+<body style="background-color: var(--primary-color);">
 
-    {% include 'lithubs/components/navbar.html' %}
+{% include 'lithubs/components/navbar.html' %}
 
+<!-- error messages -->
 {% if messages %}
     {% for message in messages %}
     <p class="message-errors">{{ message }}</p>
@@ -30,6 +31,7 @@
 
 {% endblock content %}
 
+<!-- Javascript -->
 <script src="{% static 'lithubs/js/index.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/3ff46289c8.js" crossorigin="anonymous"></script>
