--- a/lithubs/templates/lithubs/index.html
+++ b/lithubs/templates/lithubs/index.html
@@ -25,7 +25,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {% if request.user.is_authenticated %}
         <li class="nav-item">
-	  <i style="color: white;"class="fa fa-pen-to-square fa-2x feed-icons"></i>
+	<a href="{% url 'lithubs:repository-form' %}"><i style="color: white;"class="fa fa-pen-to-square fa-2x feed-icons"></i></a>
         </li>
         <li class="nav-item">
 	      <a class="nav-link active" aria-current="page" href="{% url 'lithubs:feed' %}">Feed</a>
