--- a/lithubs/templates/lithubs/components/navbar.html
+++ b/lithubs/templates/lithubs/components/navbar.html
@@ -44,7 +44,7 @@
         </li>
       {% endif %}
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" type="search" placeholder="Search LitHub" aria-label="Search">
       </form>
     </div>
   </div>
