--- a/lithubs/templates/lithubs/feed.html
+++ b/lithubs/templates/lithubs/feed.html
@@ -96,8 +96,9 @@
       <p style="color: grey;">posted {{ repo.created|timesince }} ago</p>
       <p style="color: grey;">updated {{ repo.updated|timesince }} ago</p>
       <p style="color: grey;">{{ repo.synopsis|length|div:200 }}  min read</p>
-      <i class="fa fa-hands-clapping fa-2x feed-icons"></i>
-      <span>{{ repo.likes_count }}</span>
+      <a onsubmit="like(event)" href="/like_repo?repo_id={{ repo.id }}"><i style="color: var(--azure);"class="fa fa-hands-clapping fa-2x feed-icons"></i></a>
+
+      <span>{{ repo.num_of_likes }}</span>
       </div>
 
       </div>
