--- a/lithubs/templates/lithubs/index.html
+++ b/lithubs/templates/lithubs/index.html
@@ -39,7 +39,7 @@
           </a>
           <ul class="dropdown-menu" style="background-color: var(--primary-color);">
 		  <li><a class="dropdown-item" href="{% url 'lithubs:profile' user.id %}">your profile</a></li>
-            <li><a class="dropdown-item" href="#">your settings</a></li>
+		  <li><a class="dropdown-item" href="{% url 'lithubs:settings' %}">your settings</a></li>
             <li><hr class="dropdown-divider"></li>
 	    <li><a class="dropdown-item" href="{% url 'lithubs:signout' %}">sign out</a></li>
           </ul>
