--- a/lithubs/templates/lithubs/feed.html
+++ b/lithubs/templates/lithubs/feed.html
@@ -37,8 +37,8 @@
             <img class="nav-avatar" src="{{ user.avatar.url}}" alt="">
           </a>
           <ul class="dropdown-menu" style="background-color: var(--primary-color);">
-		  <li><a class="dropdown-item" href="{% url 'lithubs:profile' user.id %}">your profile</a></li>
-            <li><a class="dropdown-item" href="#">your settings</a></li>
+	    <li><a class="dropdown-item" href="{% url 'lithubs:profile' user.id %}">your profile</a></li>
+	    <li><a class="dropdown-item" href="{% url 'lithubs:settings' %}">your settings</a></li>
             <li><hr class="dropdown-divider"></li>
 	    <li><a class="dropdown-item" href="{% url 'lithubs:signout' %}">Sign out</a></li>
           </ul>
