--- a/lithubs/templates/lithubs/components/forms/login_register.html
+++ b/lithubs/templates/lithubs/components/forms/login_register.html
@@ -65,6 +65,8 @@
     </div>
   </div>
 </nav>
+<!-- End Nav -->
+
 {% if page == 'login' %}
 <!-- Login -->
 <main class="form-signin w-100 m-auto">
