--- a/lithubs/templates/lithubs/index.html
+++ b/lithubs/templates/lithubs/index.html
@@ -1,15 +1,142 @@
 {% load static %}
+{% load bootstrap5 %}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title></title>
+<meta charset="UTF-8">
+<link rel="icon" type="image/ico" href="{% static 'lithubs/media/resources/parchment.png' %}">
+<title>LitHub</title>
+
+<link rel="stylesheet" href="{% static 'lithubs/css/styles.css' %}">
+
+<!-- bootstrap -->
+{% bootstrap_css %}
+
 </head>
-<body>
-	<h1>hello</h1>
-	{% for users in user %}
-	<img src={{ users.avatar.url }}>
-	{% endfor %}
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+  <img class="navbar-img" src="{% static 'lithubs/media/resources/parchment.png' %}" alt="parchment">
+    <a class="navbar-brand" href="{% url 'lithubs:index' %}" style="color: var(--azure); margin-left: 1%; font-size: 30px;">LitHub</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <!-- {% if request.user.is_authenticated %} -->
+        <li class="nav-item">
+	<a href=""><i style="color: white;"class="fa fa-pen-to-square fa-2x feed-icons"></i></a>
+        </li>
+        <li class="nav-item">
+	      <!-- <a class="nav-link active" aria-current="page" href="">Feed</a> -->
+        </li>
+        <li class="nav-item">
+	      <!-- <a class="nav-link active" aria-current="page" href="">Sign out</a> -->
+        </li>
+        <li class="nav-item dropdown">
+          <!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
+            <!-- <img class="nav-avatar" src="{{ user.avatar.url}}" alt=""> -->
+          </a>
+          <ul class="dropdown-menu" style="background-color: var(--primary-color);">
+		  <!-- <li><a class="dropdown-item" href="">your profile</a></li> -->
+		  <!-- <li><a class="dropdown-item" href="">your settings</a></li> -->
+            <li><hr class="dropdown-divider"></li>
+	    <!-- <li><a class="dropdown-item" href="">sign out</a></li> -->
+          </ul>
+        </li>
+      </ul>
+      <!-- {% else %} -->
+        <li class="nav-item">
+	      <!-- <a class="nav-link active" aria-current="page" href="">Sign in</a> -->
+        </li>
+        <li class="nav-item">
+          <!-- <a class="nav-link" href="">sign up</a> -->
+        </li>
+        <li class="nav-item">
+	      <!-- <a class="nav-link active" aria-current="page" href="">Feed</a> -->
+        </li>
+      <!-- {% endif %} -->
+    </div>
+  </div>
+</nav>
+<body id="bg"style="background-image:url('{% static "lithubs/media/resources/space.jpg" %}'); background-repeat:no-repeat; background-size:cover;">
+
+  <div class="container-fluid main">
+    <div class="row">
+      <div class="main-txt col-lg-6">
+        <h1 class="main-header">Where Stories are Told</h1>
+        <p class='main-sub-header'>The platform for writers to share their work with the world</p>
+        <div class="input-group input-group-sm">
+		<!-- <a href="" class="main-signup span-btn input-group-text" id="inputGroup-sizing-lg" style="background-color: light grey; border:none; color: black; text-decoration: none;">Sign up for LitHub</a> -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- features --> 
+  <div class="features-icon-container container-fluid main">
+    <div class="row">
+      <div class="col-lg-4">
+        <h1 class="features-header">Share</h1>
+        <img class='features-icon' src="{% static 'lithubs/media/resources/share.png' %}" alt='pen'>
+	<p class='features-paragraph'>Create a repository and share whatever you've written today, good or bad</p>
+      </div>
+      <div class="col-lg-4">
+        <h1 class="features-header">Read</h1>
+        <img class='features-icon' src="{% static 'lithubs/media/resources/read.png' %}" alt='pen'>
+	<p class='features-paragraph'>Read and offer critique on pieces shared by other writers</p>
+      </div>
+      <div class="col-lg-4">
+        <h1 class="features-header">Edit</h1>
+        <img class='features-icon' src="{% static 'lithubs/media/resources/edit.png' %}" alt='pen'>
+	<p class='features-paragraph'>Update a document previously shared with todays edits or revisions</p>
+      </div>
+    </div>
+  </div>
+	
+  <!-- hero -->
+  <div class='vl'></div>
+   <div class="container col-xxl-8 px-4 py-5 hero-container">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="{% static 'lithubs/media/resources/screenshot2.jpg' %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="hero-header display-5 fw-bold lh-1 mb-3">Give Your Writing a Home</h1>
+        <p class="lead">Tired of looking at unread manuscripts? Sign up for LitHub and create a repository where you can host, update, share, and maintain you work</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+		<button type="button" class="btn btn-primary btn-lg px-4 me-md-2"><a href="" style="color: white; text-decoration: none">Sign up</a></button>
+        </div>
+      </div>
+    </div>
+	
+    <div class='vl'></div>
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-lg-6">
+        <h1 class="hero-header display-5 fw-bold lh-1 mb-3">Help Your Fellow Writiers by Proof-Reading and Collaborations</h1>
+        <p class="lead">By proof-reading and collaborating on public repositories, you and your fellow writers can help each other get noticed</p>
+      </div>
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="{% static 'lithubs/media/resources/study.jpg' %}" class="study-img d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+    </div>
+    
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="{% static 'lithubs/media/resources/key.png' %}" class="key-img d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="hero-header display-5 fw-bold lh-1 mb-3">Alright Then, Keep Your Secrets</h1>
+        <p class="lead">Feeling Shy? Humble? Or do you just want to keep the next great American Novel under wraps. Keep your brilliant ideas under lock and key by setting your repositories to private</p>
+      </div>
+    </div>
+  </div>
+
+  <p id="quote"></p>
+
+<script src="{% static 'lithubs/js/index.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/3ff46289c8.js" crossorigin="anonymous"></script>
 </body>
 </html>
+ 
