--- a/lithubs/templates/lithubs/components/forms/settings_form.html
+++ b/lithubs/templates/lithubs/components/forms/settings_form.html
@@ -1,6 +1,7 @@
-{% extends 'lithubs/components/main.html' %}
+{% extends 'lithubs/components/base.html' %}
 {% load static %}
 {% block content %}
+
 <p class="repo-create-header">Edit your profile <b>{{ user.username }}</b></p>
 <form class="repo-create-form" action="" method="POST" enctype="multipart/form-data">
 	{% csrf_token %}
@@ -12,4 +13,5 @@
 	<input type=text name="bio" placeholder="bio" autofocus>
 	<button class="repo-create-btn" type="submit" value="Submit">Edit</button>
 </form>
+
 {% endblock content %}
