--- a/lithubs/templates/lithubs/index.html
+++ b/lithubs/templates/lithubs/index.html
@@ -25,7 +25,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {% if request.user.is_authenticated %}
         <li class="nav-item">
-	<a href=""><i style="color: white;"class="fa fa-pen-to-square fa-2x feed-icons"></i></a>
+	<a href="{% url 'lithubs:repository-form' %}"><i style="color: white;"class="fa fa-pen-to-square fa-2x feed-icons"></i></a>
         </li>
         <li class="nav-item">
 	      <a class="nav-link active" aria-current="page" href="{% url 'lithubs:feed' %}">Feed</a>
@@ -38,8 +38,8 @@
             <img class="nav-avatar" src="{{ user.avatar.url}}" alt="">
           </a>
           <ul class="dropdown-menu" style="background-color: var(--primary-color);">
-            <li><a class="dropdown-item" href="">your profile</a></li>
-            <li><a class="dropdown-item" href="">your settings</a></li>
+            <li><a class="dropdown-item" href="{% url 'lithubs:profile' user.id %}">your profile</a></li>
+            <li><a class="dropdown-item" href="{% url 'lithubs:settings' %}">your settings</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="{% url 'lithubs:signout' %}">sign out</a></li>
           </ul>
