--- a/lithubs/templates/lithubs/profile.html
+++ b/lithubs/templates/lithubs/profile.html
@@ -15,7 +15,7 @@
     <hr>
     {% for repo in repos %}
     <div>
-    <p><a class="profile-grid-col-1-title" href="#">{{ repo.title }}</a></p>
+    <p><a class="profile-grid-col-1-title" href="{% url 'lithubs:repository' repo.id %}">{{ repo.title }}</a></p>
     <p class="profile-grid-col-1-synopsis">{{ repo.synopsis }}</p>
 
     <!-- Start inner grid -->
@@ -25,8 +25,8 @@
     <p class="profile-inner-genre">🟠 {{ repo.form }}</p>
 
       {% if user == repo.owner %}	      
-      <a href="#"><i style="color: grey;" class="fa fa-pen-to-square"></i></a>
-      <a href="#"><i style="color: grey;" class="fa-regular fa-trash-can"></i></a>
+      <a href="{% url 'lithubs:update-repository' repo.id %}"><i style="color: grey;" class="fa fa-pen-to-square"></i></a>
+      <a href="{% url 'lithubs:delete-repository' repo.id %}"><i style="color: grey;" class="fa-regular fa-trash-can"></i></a>
       {% endif %}
     </div>
 
@@ -48,7 +48,7 @@
     <div>
       <span><img class="feed-owner-avatar" src="{{ repo.owner.avatar.url }}"></span>
       <span><b><a class="repository-owner-link" href="{% url 'lithubs:profile' repo.owner.id %}">{{ repo.owner.username }}</a></b></span>
-      <p class="profile-feed-title"><a class="profile-grid-col-1-title" href="#">{{ repo.title }}</a></p>
+      <p class="profile-feed-title"><a class="profile-grid-col-1-title" href="{% url 'lithubs:repository' repo.id %}">{{ repo.title }}</a></p>
      </div>
      <br>
       {% endfor %}
