--- a/lithubs/templates/lithubs/components/forms/login_register.html
+++ b/lithubs/templates/lithubs/components/forms/login_register.html
@@ -15,13 +15,13 @@
 
 </head>
 
-<body id="bg"style="background-image:url('{% static "lithubs/media/resources/space.jpg" %}'); background-repeat:no-repeat; background-size:cover;">
+<body style="background-color: var(--primary-color)">
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
   <img class="navbar-img" src="{% static 'lithubs/media/resources/parchment.png' %}" alt="parchment">
     <a class="navbar-brand" href="{% url 'lithubs:index' %}" style="color: var(--azure); margin-left: 1%; font-size: 30px;">LitHub</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -118,6 +118,11 @@
   </form>
 
   {% endif %}
+
+<!-- Javascript -->
+<script src="{% static 'lithubs/js/index.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/3ff46289c8.js" crossorigin="anonymous"></script>
 </body>
 </html>
 
