Fix missing navbar icon on profile page

--- a/lithubs/templates/lithubs/components/navbar.html
+++ b/lithubs/templates/lithubs/components/navbar.html
@@ -3,7 +3,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-  <img class="navbar-img" src="{% static 'lithubs/img/parchment.png' %}" alt="parchment">
+  <img class="navbar-img" src="{% static 'lithubs/media/resources/parchment.png' %}" alt="parchment">
     <a class="navbar-brand" href="{% url 'lithubs:index' %}" style="color: var(--azure); margin-left: 1%; font-size: 30px;">LitHub</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
